[package]
name = "treacherous_safari"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"]}
rand = "0.8.5"
bevy_mod_picking = "0.17.0"
bevy_utils = { version = "0.12", default-features = false }
bevy_eventlistener = "0.6"
